@@ -13,6 +13,7 @@ CHANGES IN HTMLDOC v1.8.28
 
 	- SECURITY: Fixed three buffer overflow issues when reading AFM files
 	  and parsing page sizes.
+	- Fixed GPL license text in GUI (STR #222)
 	- Fixed a table formatting problem when a column has multiple colspan
 	  values (PR #6709)
 	- Fixed parsing of HTML comments (STR #181)
